Compiler/tests/good/Output/05_output.rs
// Single line comment
fn main(){
  println!(false);
  return;
}
