Compiler/tests/bad/Loops/03_loops.rs
fn main()
{
    while false {
        println!(3);
    }
    continue;
}
